# matrix-ai-assistant

./: .gitignore  README.md  pyproject.toml
matrix_ai_assistant/: bot.py  commands.py  config.py  db.py  log.py  main.py  util.py
